# mcp-testclient

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/mcp_testclient/: __init__.py  client.py
tests/: test_basic.py
